--- a/WebContent/CSS/check.css
+++ b/WebContent/CSS/check.css
@@ -1,5 +1,20 @@
-body{
+h4{
+	text-align:center;
+}
+.a{
+	float:right;
+	width:33%;
+	text-align:right;
 
+}
+.b{
+	float:right;
+	width:33%;
+	text-align:center;
+}
+
+.clear{
+	clear:both;
 }
 .imagea{
 	width:300px;
@@ -9,3 +24,4 @@ body{
 	width:300px;
 	height:400px;
 }
+
