--- a/WebContent/CSS/index.css
+++ b/WebContent/CSS/index.css
@@ -5,11 +5,11 @@ header{
     width:100%;
     height:130px;
     background-color:#FFCC99;
-
+    background-image: ur("img/de281b48e7ff7179dd118b9b260aadac.jpg")
 }
 
 h2{
-    font-size:17px;
+    font-size:30px;
 }
 
 .box{
