--- a/WebContent/CSS/index.css
+++ b/WebContent/CSS/index.css
@@ -5,7 +5,8 @@ header{
     width:100%;
     height:130px;
     background-color:#FFCC99;
-    background-image: url("img/de281b48e7ff7179dd118b9b260aadac.jpg")
+    background-image:url("../img/de281b48e7ff7179dd118b9b260aadac.jpg");
+    //階層ごとに../が必要な場合がある。本当にディレクトリまでのパスがあっているか確かめる。
 }
 
 h2{
