--- a/WebContent/CSS/rireki_enju.css
+++ b/WebContent/CSS/rireki_enju.css
@@ -4,7 +4,7 @@
 }
 
 body{
-	background-image: url('img/renji2.jpg');
+	background-image: url('../img/renji2.jpg');
 	background-size:cover;
 	background-repeat: no-repeat;
 	font-family:'Gungsuh';
