--- a/WebContent/CSS/category.css
+++ b/WebContent/CSS/category.css
@@ -10,6 +10,13 @@ h3{
 	width:300px;
 	height:400px;
 }
+table{
+	width:100%;
+	text-align:center;
+}
+.name{
+	font-size:25px;
+}
 h5{
 	text-align:right;
 }
