--- a/WebContent/CSS/mypage_enju.css
+++ b/WebContent/CSS/mypage_enju.css
@@ -9,7 +9,16 @@ body{
 }
 a{
 	color: #000000;
+	padding: 20px;
 }
 p a:hover{
 	color:red;
+}
+h1:first-letter {
+font-size: 1.5em;
+color: #88b5ff;
+}
+
+.opacity{
+	opacity: 0.6;
 }
