--- a/WebContent/CSS/help.css
+++ b/WebContent/CSS/help.css
@@ -4,8 +4,10 @@ h1{
 	font-size: 25px;
 	color: #ffa500;
 }
-/*FORM2*/
 
+
+
+/*FORM2*/
 
 form#form2 {
 	color: #666;
@@ -17,6 +19,7 @@ form#form2 {
 	-moz-border-radius: 15px;
 	border-radius: 15px;
 }
+
 form#form2 p {
 	margin:7px 0 0;
 	padding:10px;
@@ -35,8 +38,8 @@ form#form2 p:first-child{
 form#form2 p span {
 	width: 19em;
 	margin:0px;
-	display:block;
-	float:left;
+display:block;
+	float:center;
 }
 
 
@@ -47,7 +50,6 @@ form#form2 p:after {
 	visibility:hidden;
 	clear:both;
 }
-
 
 form#form2 p label .txtfiled, form#form2 p select {
 	width:300px;
@@ -65,20 +67,24 @@ form#form2 p label .txtfiled, form#form2 p select {
 	-webkit-border-radius:7px;
 	-moz-border-radius:7px;
 }
+
+
+
 form#form2 p select {
 
 	width:200px;
 }
 
-form#form2 p span.check:after, form#form2 p span.radio:after {
+form#form2 p span.check:after, form#form2 p span.submit:after {
 	content:".";
 	display:block;
 	height:0;
 	visibility:hidden;
 	clear:both;
 
-form#form2 p input[type="submit"]
+form#form2 p input[type="submit"] ,
  {
+	cursor:pointer;
 	font-size:130%;
 	font-weight: bold;
 	width:100px;
@@ -87,3 +93,8 @@ form#form2 p input[type="submit"]
 	color: #fff;
     border:1px solid #bbb;
     background: #C08B9B;
+
+
+
+
+
