--- a/WebContent/CSS/help.css
+++ b/WebContent/CSS/help.css
@@ -1,5 +1,3 @@
-
-
 h1{
 	font-size: 25px;
 	color: #ffa500;
@@ -7,92 +5,78 @@ h1{
 
 
 
-/*FORM2*/
-
 form#form2 {
 	color: #666;
 	padding: 7px;
 	margin-bottom: 15px;
-	border: 3px; solid #EEE9ED;
+	border: 3px solid #EEE9ED;
 
-	webkit-border-radius: 15px;
-	-moz-border-radius: 15px;
 	border-radius: 15px;
+	width:700px;
 }
+
+
+
 
 form#form2 p {
-	margin:7px 0 0;
+margin:7px 0 0;
 	padding:10px;
-	font-size: 12px;
+	font-size: 13px;
 	background: #EEE9ED;
 
--webkit-border-radius: 8px;
--moz-border-radius: 8px;
 border-radius: 8px;
+width:600px;
 }
+
+
+
 
 form#form2 p:first-child{
 	margin:0;
 }
 
+
+
+
 form#form2 p span {
-	width: 19em;
+	width: 20em;
 	margin:0px;
 display:block;
 	float:center;
 }
 
 
+
+
+
 form#form2 p:after {
-	content:".";
+content:".";
 	display:block;
 	height:0;
 	visibility:hidden;
 	clear:both;
 }
 
-form#form2 p label .txtfiled, form#form2 p select {
-	width:300px;
-	padding:3px 5px;
-	margin:0px;
-	color:#666;
-	border: solid 1px #ccc;
-	background: #fff;
-
-    -webkit-box-shadow: 1px 1px 1px #fff;
-    -moz-box-shadow: 1px 1px 1px #fff;
-	box-shadow: 1px 1px 1px #fff;
-
-	border-radius:7px;
-	-webkit-border-radius:7px;
-	-moz-border-radius:7px;
-}
 
 
 
 form#form2 p select {
 
-	width:200px;
+	width:170px;
 }
 
-form#form2 p span.check:after, form#form2 p span.submit:after {
+
+form#form2 p span.check:after,  {
 	content:".";
 	display:block;
 	height:0;
 	visibility:hidden;
 	clear:both;
+}
 
-form#form2 p input[type="submit"] ,
- {
-	cursor:pointer;
-	font-size:130%;
-	font-weight: bold;
-	width:100px;
-	padding: 4px 10px;
-	margin-right:0.5em;
-	color: #fff;
-    border:1px solid #bbb;
-    background: #C08B9B;
+
+
+
 
 
 
