--- a/WebContent/CSS/login_kato.css
+++ b/WebContent/CSS/login_kato.css
@@ -17,40 +17,47 @@ body{
 
 	}
 
-#login {
+#login,loginbox {
 	margin: 30px auto;
 	padding:50px;
-	background: #ffffff;
+	background: #c0c0c0;
 	width: 400px;
 	height: 400px;
 	text-align: center;
-	border: 5px solid #c0c0c0;
-
+	border: 5px solid #808080;
+	webkit-border-radius: 15px;
+	-moz-border-radius: 15px;
+	border-radius: 15px;
 }
 
 
-.loginbutton {
-
-	width: 100px;
-	margin-bottom:10px;
-	padding:5px;
-	font-size:100%;
-	font-family: 'メイリオ',sans-serif;
-	border: 3px solid  #ff80ff;
-
+.loginbutton  {
+  background: #ff80ff;
+  border-color: transparent;
+  color: #000000;
+  cursor: pointer;
+  font-family: 'メイリオ', Meiryo,sans-serif;
+  font-size:150%;
+  width: 180px;
+  height: 50px;
+  webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
 }
+
+
 
 .textBox {
 
-	font-size: 300%;
-	width: 255px;
+	font-size: 100%;
+	width: 100px;
 	padding: 1px;
 	border: 1px solid #999999;
 }
 
 
 em{
-font-family: 'メイリオ',sans-serif;
+font-family: 'メイリオ', Meiryo,sans-serif;
 
 }
 
