--- a/WebContent/CSS/header.css
+++ b/WebContent/CSS/header.css
@@ -9,6 +9,21 @@ header{
 	margin:0;
 	padding:10px;
 	font-family:ƒƒCƒŠƒI;
-	background-color:pink;
+	background-color:#ff00ff;
 
+}
+
+.square_btn {
+	font-weight: bold;
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    color: black;
+    border: double 4px black;
+    border-radius: 3px;
+    transition: .4s;
+    background:#ffffff;
+}
+.square_btn:hover {
+    background: #c0c0c0;
 }
