--- a/WebContent/CSS/help.css
+++ b/WebContent/CSS/help.css
@@ -1,7 +1,14 @@
+
+
+
+
 h1{
 	font-size: 25px;
 	color: #ffa500;
 }
+
+
+
 
 
 
@@ -12,8 +19,9 @@ form#form2 {
 	border: 3px solid #EEE9ED;
 
 	border-radius: 15px;
-	width:700px;
+	width:800px;
 }
+
 
 
 
@@ -25,7 +33,7 @@ margin:7px 0 0;
 	background: #EEE9ED;
 
 border-radius: 8px;
-width:600px;
+width:700px;
 }
 
 
@@ -42,7 +50,7 @@ form#form2 p span {
 	width: 20em;
 	margin:0px;
 display:block;
-	float:center;
+	float:left;
 }
 
 
@@ -60,13 +68,14 @@ content:".";
 
 
 
+
 form#form2 p select {
 
 	width:170px;
 }
 
 
-form#form2 p span.check:after,  {
+form#form2 p span.check: after,  {
 	content:".";
 	display:block;
 	height:0;
@@ -75,6 +84,42 @@ form#form2 p span.check:after,  {
 }
 
 
+form#form2 box1 {
+	margin-right: 200px;
+}
+
+
+form#form2 box2 {
+	margin-right: 200px;
+}
+
+
+form#form2 box3 {
+	margin-right: 250px;
+}
+
+
+form#form2 box4 {
+	margin-right: 600px;
+}
+
+
+form#form2 box5 {
+	margin-right: 200px;
+}
+
+
+form#form2 box6 {
+	margin-right: 1000px;
+}
+
+form#form2 box7 {
+	margin-right: 200px;
+}
+
+form#form2 box8 {
+	margin-right: 210px;
+}
 
 
 
