--- a/WebContent/CSS/header.css
+++ b/WebContent/CSS/header.css
@@ -3,7 +3,6 @@ header{
 	position:absolute;
 	left:0;
 	top:0;
-	margin-bottom:20px;
 	position:fixed;
 	width:100%;
 	height:100px;
@@ -14,6 +13,10 @@ header{
 	z-index: 10;
 	font-size:13px;
 
+}
+.logo{
+	width:134px;
+	height:45px;
 }
 
 .header_btn {
