--- a/WebContent/CSS/help.css
+++ b/WebContent/CSS/help.css
@@ -1,19 +1,20 @@
 
 
 
-
 h1{
 	font-size: 25px;
 	color: #ffa500;
 }
 
+h2{
 
+}
 
 
 
 
 form#form2 {
-	color: #666;
+color: #666;
 	padding: 7px;
 	margin-bottom: 15px;
 border: 3px solid #EEE9ED;
