--- a/WebContent/CSS/login_kato.css
+++ b/WebContent/CSS/login_kato.css
@@ -1,11 +1,6 @@
 @CHARSET "UTF-8";
 
-* {-webkit-box-sizing: border-box;
-   -ms-box-sizing: border-box;
-   -moz-box-sizing: border-box;
-   -o-box-sizing: border-box;
-   box-sizing: border-box
-  }
+
 
 
 body{
@@ -22,8 +17,8 @@ body{
 	margin: 100px auto;
 	padding:50px;
 	background: #ffffff;
-	width: 400px;
-	height: 400px;
+	width: 300px;
+	height: 300px;
 	text-align: center;
 	border: 5px solid #EEE9ED;
 	webkit-border-radius: 15px;
@@ -44,7 +39,11 @@ body{
   webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
-
+-moz-transition: -moz-transform 1s linear;
+    -webkit-transition: -webkit-transform 1s linear;
+    -o-transition: -o-transform 1s linear;
+    -ms-transition: -ms-transform 1s linear;
+    transition: transform 1s linear;
   }
 
   .loginbutton:hover {
@@ -52,10 +51,12 @@ body{
   top:2px;
   left:2px;
   opacity: 0.8;
-}
-
-
-
+  -moz-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    transform: rotate(30deg);
+  }
 
 .textBox {
 
