--- a/WebContent/CSS/header.css
+++ b/WebContent/CSS/header.css
@@ -5,7 +5,7 @@ header{
 	top:0;
 	position:fixed;
 	width:100%;
-	height:100px;
+	height:60px;
 	margin:0;
 	padding:10px;
 	font-family:ƒƒCƒŠƒI;
@@ -15,6 +15,8 @@ header{
 
 }
 .logo{
+	position:relative;
+	top:10px;
 	width:134px;
 	height:45px;
 }
