--- a/WebContent/CSS/rireki_enju.css
+++ b/WebContent/CSS/rireki_enju.css
@@ -4,20 +4,20 @@
 }
 
 body{
-	background-image: url('../img/renji2.jpg');
-	background-size:cover;
-	background-repeat: no-repeat;
-	font-family:'Gungsuh';
-	font-size:18px;
-	font-family:'Gungsuh';
+
+	font-family:'ÉÅÉCÉäÉI';
+
+
 }
 
-img{
-	padding:18px 10px;
+.image{
+	padding:18px 0px 10px 150px;
+	width:35%;
 
 }
 h1{
 	float:left;
+
 }
 p{
 	padding:20px 10px;
@@ -25,4 +25,30 @@ p{
 }
 .button{
 	padding:500px 500px 100px;
+}
+
+
+
+table{
+	width: 500px;
+	height: 150px;
+}
+
+th{
+	padding:0px 20px;
+}
+
+
+td{
+	width: 20px 150px;
+}
+
+
+.main{
+
+	margin-top: 80px;
+}
+
+.gif{
+	padding:10px;
 }
