--- a/WebContent/CSS/touroku_enju.css
+++ b/WebContent/CSS/touroku_enju.css
@@ -1,22 +1,65 @@
 body{
-	font-size:14px;
-	font-family:'Gungsuh';
-	background-repeat: no-repeat;
-	background-position: center center;
-	width: 100%;
-	background-image: url('../img/renji.jpg');
-	background-size:cover;
+
+	font-family:'ÉÅÉCÉäÉI';
+
 }
 
-.button{
-	padding:20px 220px;
+
+.btn{
+	font-size: 12px;
+	background: #EEE9ED;
+	text-align:center;
+	width:700px;
+	padding:5px 0px 5px;
+	margin:7px 0 0;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
 }
 
-th{
-	webkit-border-radius: 15px;
+
+
+
+table{
+	margin:7px 0 0;
+	padding:10px;
+	font-size: 12px;
+	background: #EEE9ED;
+	width:700px;
+
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+}
+
+h1:first-letter {
+font-size: 1.5em;
+
+}
+
+h1{
+	 float:left;
+	 font-weight: bold;
+	text-align:center;
+	width:680px;
+	color:#ff1113;
+
+  padding: .5em .75em;
+  background: -webkit-repeating-linear-gradient(45deg, #ffff00, #000000 100px, #000000 5px, #000000 10px);
+  background: repeating-linear-gradient(45deg, #ffff00, #ffff00 5px, #000000 5px, #000000 10px);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, .3);
+
+
+	padding: 7px;
+	margin-bottom: 15px;
+	border: 3px solid #EEE9ED;
+
 	border-radius: 15px;
-	border: 3px; solid #EEE9ED;
+
 }
-div{
-	padding:0px 265px;
+
+.main{
+
+	margin-top:80px;
 }
+
