--- a/WebContent/CSS/detail_yamaguchi.css
+++ b/WebContent/CSS/detail_yamaguchi.css
@@ -1,19 +1,12 @@
-.body{
+.aaa{
+	margin-top:100px;
     font-size: 20px;
     font-color:black;
     color:grey;
     background-image:url(img/haikei2.jpg);
+    background-size:cover;
 }
-header{
-position:absolute;
-top:0px;
-left:0px;
-width:100%;
-height:50px;
-background-color:#ffd9e3;
-color: black;
-font-size:12px;
-}
+
 
 footer{
 position:absolute;
