--- a/WebContent/CSS/cart.css
+++ b/WebContent/CSS/cart.css
@@ -1,5 +1,4 @@
-h1{
-	background-color:pink;
+h1{background-color:pink;
 margin-top:100px;
 }
 table.type01 {
@@ -57,7 +56,7 @@ table.type02 th {
 	background: #eee;
 }
 table.type02 td {
-	width: 50px;
+	width: 150px;
 	padding: 10px;
 	 font-weight: bold;
 	vertical-align: top;
@@ -121,6 +120,3 @@ table.type04 td {
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
 }
-
-
-
