--- a/WebContent/CSS/cart.css
+++ b/WebContent/CSS/cart.css
@@ -42,7 +42,7 @@ table.type02 {
 	line-height: 1.5;
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
-	width: 685px
+	width: 685px;
 }
 table.type02 th {
 	width: 192px;
