--- a/WebContent/CSS/detail_yamaguchi.css
+++ b/WebContent/CSS/detail_yamaguchi.css
@@ -1,88 +1,120 @@
-.aaa{
-	margin-top:100px;
-    font-size: 20px;
-    font-color:black;
-    color:grey;
-    background-image:url(img/haikei2.jpg);
-    background-size:cover;
-}
+
 
 
 footer{
 position:absolute;
 bottom:0;
 width:100%;
-height:70px;
-background-color:#ffd9e3;
+height:50px;
+background-color:#ff1493;
 color: black;
 text-align:center;
-font-size:12px;
-line-height:70px;
+font-size:10px;
+line-height:50px;
 }
-.main{
-	position:absolute;
-    background-color:#e6e6fa;
-    width:100%;
-    left:0px
-    }
 
-.mainsidebar{
-	float:left;
-	width;500px;
-	height;300px;
-    background-color:#e6e6fa;
-    left:0px
-}
 
 .photo{
-   top:0;
+  margin-top:0px;
    right:0;
    bottom:0;
    left:0;
     width: 100%;
-    height:500px;
+    height:600px;
     color: ;blue;
 }
 
 .navi{
 position:absolute;
-top:50px;
+top:80px;
 width:100%;
+float:left;
 }
 
 .navibox{
-float:static;
+position:relative;
+top:30%;
+
+text-align:center;
 width:170px;
 height:50px;
 background-color:#daa520;
-text-align: center;
+
 margin:5px;
-font-size:20px;
+font-size:15px;
 color:black;
-line-height:50px;
+line-height:30px;
+border:groove;
 }
 
-.navibox1{
-float:right;
-width:100px;
-height:25px;
-top:20px;
-right:0px;
-background-color:#f5ded3;
-text-align: center;
-margin:5px;
-font-size:17px;
-color:black;
-line-height:30px;}
+.cart{
+position:absolute;
+right:10px;
+width:250px;
+height:200px;
+background-color:#adff2f;
+font-color:black;
+top:100px;
+text-align:center;
+border:groove;
+}
 
-.navibox2{
-float:left;
-width:100px;
-height:25px;
-bottom:0px;
-background-color:#f5ded3;
-text-align: justify;
-margin:5px;
-font-size:17px;
-color:black;
-line-height:30px;}
+
+.cartbox{
+position:absolute;
+text-align:center;
+
+}
+
+
+
+.center {
+  position: absolute;
+ width:300px;
+	height:400px;
+
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+}
+.relative{
+	potion:relative;
+	width:100%;
+
+}
+
+.absolute{
+	position:absolute;
+
+}
+
+
+
+.clear{
+	clear:both;
+
+}
+
+.info{
+position:absolute;
+left:10px;
+bottom:30px;
+text-align:center;
+width:30%;
+height:270px;
+font-size:14px;
+background-color:white;
+border:groove;
+}
+
+.price{
+	color:#ff0000;
+	font-size:18px;
+	font-weight:bold;
+
+}
+
+
+
+
