--- a/WebContent/CSS/detail_yamaguchi.css
+++ b/WebContent/CSS/detail_yamaguchi.css
@@ -36,12 +36,12 @@ position:relative;
 top:30%;
 
 text-align:center;
-width:170px;
+width:220px;
 height:50px;
-background-color:#daa520;
+background-color:#00ffff;
 
 margin:5px;
-font-size:15px;
+font-size:14px;
 color:black;
 line-height:30px;
 border:groove;
