--- a/WebContent/CSS/touroku_enju.css
+++ b/WebContent/CSS/touroku_enju.css
@@ -38,7 +38,7 @@ font-size: 1.5em;
 }
 
 h1{
-	 float:left;
+
 	 font-weight: bold;
 	text-align:center;
 	width:680px;
@@ -63,3 +63,31 @@ h1{
 	margin-top:80px;
 }
 
+.string{
+	margin:7px 0 0;
+	padding:2px;
+	font-size: 12px;
+	background: #EEE9ED;
+	width:695px;
+
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+}
+
+.inf{
+	margin:7px 0 0;
+	padding:10px;
+	font-size: 12px;
+	background: #EEE9ED;
+	width:680px;
+
+-webkit-border-radius: 8px;
+-moz-border-radius: 8px;
+border-radius: 8px;
+
+}
+.textbox{
+	width:250px;
+
+}
