--- a/WebContent/CSS/login_kato.css
+++ b/WebContent/CSS/login_kato.css
@@ -4,14 +4,18 @@
 
 
 body{
+	margin: 0px auto;
 	width:100%;
 	height:100%;
 	float:center;
 	line-height: 1.5;
 	color: #000000;
 	background: #EEE9ED;
-
+	font-family: 'メイリオ', Meiryo,sans-serif;
 	}
+
+
+
 
 #login,loginbox {
 	margin: 100px auto;
@@ -19,7 +23,7 @@ body{
 	background: #ffffff;
 	width: 300px;
 	height: 300px;
-	text-align: center;
+
 	border: 5px solid #EEE9ED;
 	webkit-border-radius: 15px;
 	-moz-border-radius: 15px;
@@ -28,9 +32,9 @@ body{
 
 
 .loginbutton  {
+
   background: #ffb5da;
   border-color: transparent;
-  color: #000000;
   cursor: pointer;
   font-family: 'メイリオ', Meiryo,sans-serif;
   font-size:150%;
@@ -58,21 +62,11 @@ body{
     transform: rotate(30deg);
   }
 
-.textBox {
-
-	font-size: 100%;
-	width: 100px;
-	padding: 1px;
-	border: 1px solid #999999;
+#logincenter{
+	text-align: center;
 }
 
-
-em{
-font-family: 'メイリオ', Meiryo,sans-serif;
-
+#idpass{
+	text-align: right;
 }
 
-h1{
-color:#000000;
-
-}
