--- a/WebContent/CSS/touroku_enju.css
+++ b/WebContent/CSS/touroku_enju.css
@@ -4,7 +4,6 @@ body{
 
 }
 
-
 .btn{
 	font-size: 12px;
 	background: #EEE9ED;
@@ -16,9 +15,6 @@ body{
 	-moz-border-radius: 8px;
 	border-radius: 8px;
 }
-
-
-
 
 table{
 	margin:7px 0 0;
@@ -63,31 +59,7 @@ h1{
 	margin-top:80px;
 }
 
-.string{
-	margin:7px 0 0;
-	padding:2px;
-	font-size: 12px;
-	background: #EEE9ED;
-	width:695px;
 
--webkit-border-radius: 8px;
--moz-border-radius: 8px;
-border-radius: 8px;
-}
-
-.inf{
-	margin:7px 0 0;
-	padding:10px;
-	font-size: 12px;
-	background: #EEE9ED;
-	width:680px;
-
--webkit-border-radius: 8px;
--moz-border-radius: 8px;
-border-radius: 8px;
-
-}
-.textbox{
-	width:250px;
-
+th{
+	float:left;
 }
