--- a/WebContent/CSS/header.css
+++ b/WebContent/CSS/header.css
@@ -15,6 +15,7 @@ header{
 
 }
 .logo{
+	margin-right:1em;
 	position:relative;
 	top:10px;
 	width:134px;
@@ -22,6 +23,7 @@ header{
 }
 
 .header_btn {
+	margin:1em;
 	font-weight: bold;
     display: inline-block;
     padding: 0.5em 1em;
