--- a/WebContent/CSS/index.css
+++ b/WebContent/CSS/index.css
@@ -70,7 +70,9 @@ em {
 	height:20%;
 }
 
+.bxslider{
 
+}
 
 .slidebox {
 	position: relative;
@@ -94,7 +96,7 @@ em {
 
 .boy-item,.girl-item,.novel-item,.paperback-item,.magazine-item{
 	position:relative;
-	padding-left: 25px;
+
 	margin-left: 25%;
 
 }
