--- a/WebContent/CSS/jquery.bxslider.css
+++ b/WebContent/CSS/jquery.bxslider.css
@@ -91,7 +91,7 @@ ul.bxslider {
 }
 /* DIRECTION CONTROLS (NEXT / PREV) */
 .bx-wrapper .bx-prev {
-  left: -45px;
+  left: 0px;
   background: url('../img/images/controls.png') no-repeat 0 -32px;
 }
 .bx-wrapper .bx-prev:hover,
@@ -99,7 +99,7 @@ ul.bxslider {
   background-position: 0 0;
 }
 .bx-wrapper .bx-next {
-  right: -45px;
+  right: 0px;
   background: url('../img/images/controls.png') no-repeat -43px -32px;
 }
 .bx-wrapper .bx-next:hover,
@@ -115,6 +115,11 @@ ul.bxslider {
   height: 32px;
   text-indent: -9999px;
   z-index: 9999;
+  display: none; /*’Ç‰Á*/
+}
+/*’Ç‰Á*/
+.bx-wrapper:hover .bx-controls-direction a {
+  display: block;
 }
 .bx-wrapper .bx-controls-direction a.disabled {
   display: none;
