--- a/WebContent/CSS/detail.css
+++ b/WebContent/CSS/detail.css
@@ -53,7 +53,7 @@ border:groove;
 position:absolute;
 right:10px;
 width:250px;
-height:200px;
+height:auto;
 background-color:#adff2f;
 font-color:black;
 top:100px;
@@ -61,13 +61,19 @@ text-align:center;
 border:groove;
 }
 
-
 .cartbox{
 position:absolute;
-text-align:center;
+margin-left: auto;
+margin-right: auto;
+
 
 }
 
+
+.button{
+	margin-left: auto;
+margin-right: auto;
+}
 
 
 .center {
