--- a/WebContent/CSS/detail.css
+++ b/WebContent/CSS/detail.css
@@ -63,17 +63,9 @@ border:groove;
 
 .cartbox{
 position:absolute;
-margin-left: auto;
-margin-right: auto;
-
-
+text-align:center;
 }
 
-
-.button{
-	margin-left: auto;
-margin-right: auto;
-}
 
 
 .center {
