--- a/WebContent/CSS/detail.css
+++ b/WebContent/CSS/detail.css
@@ -1,39 +1,45 @@
 
 
-
-footer{
-position:absolute;
-bottom:0;
-width:100%;
-height:50px;
-background-color:#ff1493;
-color: black;
-text-align:center;
-font-size:10px;
-line-height:50px;
+.center {
+  position: absolute;
+  width:400px;
+  height:500px;
+  left: 5%;
+  top: 20%;
 }
 
 
-.photo{
-  margin-top:0px;
-   right:0;
-   bottom:0;
-   left:0;
-    width: 100%;
-    height:600px;
-    color: ;blue;
-}
+
 
 .navi{
 position:absolute;
-top:80px;
-width:100%;
-float:left;
+top:20%;
+width:auto;
+left: 45%;
 }
+
+
+
+.cart{
+position:absolute;
+right:10px;
+width:250px;
+height:auto;
+background-color:#adff2f;
+font-color:black;
+top:100px;
+text-align:center;
+border:groove;
+}
+
+}
+
+
+
 
 .navibox{
 position:relative;
-top:30%;
+top:40%;
 font:ÉÅÉCÉäÉI;
 font-weight:bold;
 
@@ -49,17 +55,7 @@ line-height:30px;
 border:groove;
 }
 
-.cart{
-position:absolute;
-right:10px;
-width:250px;
-height:auto;
-background-color:#adff2f;
-font-color:black;
-top:100px;
-text-align:center;
-border:groove;
-}
+
 
 .cartbox{
 position:absolute;
@@ -68,16 +64,7 @@ text-align:center;
 
 
 
-.center {
-  position: absolute;
- width:300px;
-	height:400px;
 
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate3d(-50%, -50%, 0);
-          transform: translate3d(-50%, -50%, 0);
-}
 .relative{
 	potion:relative;
 	width:100%;
