--- a/WebContent/CSS/cart.css
+++ b/WebContent/CSS/cart.css
@@ -35,7 +35,7 @@ table.type01 td {
 
 
 table.type02 {
-width: 1584px;
+max-width: 100%;
 		   color:red;
 	border-collapse: separate;
 	border-spacing: 0;
@@ -43,6 +43,7 @@ width: 1584px;
 	line-height: 1.5;
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
+	background-size:contain;
 }
 table.type02 th {
 	padding: 10px;
@@ -63,7 +64,58 @@ table.type02 td {
 	border-bottom: 1px solid #ccc;
 }
 
-#submit{
+button.button8{
 	position:absolute;
 	margin-left:1450px;
+	    /* 文字サイズを1.4emに指定 */
+    font-size: 01em;
+
+    /* 文字の太さをboldに指定 */
+    font-weight: bold;
+
+
+    /* 縦方向に10px、
+     * 横方向に30pxの余白を指定 */
+    padding: 10px 30px;
+
+    /* 文字色を白色に指定 */
+    color: #fff;
+
+    /* ボーダーをなくす */
+    border-style: none;
+
+    /* ボタンの影の指定
+     * 影の横幅を2px
+     * 縦長を2px
+     * ぼかしを3px
+     * 広がりを1px
+     * 色を#666（グレー）に指定 */
+    box-shadow: 2px 2px 3px 1px #666;
+    -moz-box-shadow: 2px 2px 3px 1px #666;
+    -webkit-box-shadow: 2px 2px 3px 1px #666;
+
+    /* テキストの影の指定
+     * 影の横幅を1px
+     * 縦長を1px
+     * ぼかしを2px
+     * 色を#000（黒）に指定 */
+    text-shadow: 1px 1px 2px #000;
+
+    /* グラデーションの指定 */
+    background: -moz-linear-gradient(bottom, #36d, #248 50%, #36d);
+    background: -webkit-gradient(linear, left bottom, left top, from(#36d), color-stop(0.5, #248), to(#36d));
+
+    /* 角丸の指定 */
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+button.button8:hover {
+    /* 透明度を20%に指定 */
+    opacity: 0.8;
+}
+
+.col-xs-5{
+	border-width: 0px;
+	padding:0px;
 }
