--- a/WebContent/CSS/adminitem.css
+++ b/WebContent/CSS/adminitem.css
@@ -1,9 +1,11 @@
 h1{
-margin-top:130px;
+	margin-top:130px;
 }
 
-.upd{
-	position:relative;
-	float:left;
-	display:inline-block;
+.regbox,.updbox{
+	width:92%;
+}
+
+.table{
+	border-collapse:collapse;
 }
